# discord_tui

./: .~lock.FlowChartCuzItsConfusing.odg#  Cargo.toml  FlowChartCuzItsConfusing.odg  README.MD  run
src/: README.md  discord_client.rs  main-legacy.rs  main.rs
