[package]
name = "discord_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
crossterm = "0.23"  
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model","cache"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }